--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -14,11 +14,28 @@ body {
   background: #f4f4f4;
   color: #333; }
 
+h1 {
+  font-family: "museo-slab",serif;
+  font-weight: 500; }
+
+h2 {
+  font-family: "museo-slab",serif;
+  font-weight: 500; }
+
+h3 {
+  font-family: "museo-slab",serif;
+  font-weight: 500; }
+
+h4 {
+  font-family: "museo-slab",serif;
+  font-weight: 500; }
+
 /*******************************************************************/
 /* Top Bar Styles */
 /*******************************************************************/
 .topBar {
-  background: #333333; }
+  background: #333333;
+  padding: 20px 0; }
   .topBar .logo {
     margin-top: 5px; }
   .topBar .topBarText {
@@ -63,7 +80,7 @@ body {
   padding: 10px 10px 20px 10px; }
 
 /*******************************************************************/
-/* Common Styles */
+/* Filter Styles */
 /*******************************************************************/
 .filter {
   background: white;
@@ -220,6 +237,17 @@ body {
     font-weight: bold;
     margin-bottom: 10px;
     display: block; }
+
+/*******************************************************************/
+/* New Event Styles */
+/*******************************************************************/
+.newEventContent .event {
+  background: white;
+  margin: 40px 0;
+  padding: 40px;
+  -webkit-box-shadow: 0px 0px 10px rgba(50, 50, 50, 0.2);
+  -moz-box-shadow: 0px 0px 10px rgba(50, 50, 50, 0.2);
+  box-shadow: 0px 0px 10px rgba(50, 50, 50, 0.2); }
 
 /*******************************************************************/
 /* Event Page Styles */
