--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -22,12 +22,33 @@ body
 	background: #f4f4f4;
 	color: #333;
 }
+h1
+{
+	font-family: "museo-slab",serif;
+	font-weight: 500;
+}
+h2
+{
+	font-family: "museo-slab",serif;
+	font-weight: 500;
+}
+h3
+{
+	font-family: "museo-slab",serif;
+	font-weight: 500;
+}
+h4
+{
+	font-family: "museo-slab",serif;
+	font-weight: 500;
+}
 /*******************************************************************/
 /* Top Bar Styles */
 /*******************************************************************/
 .topBar
 {
 	background: $topBar_color;
+	padding: 20px 0;
 	.logo
 	{
 		margin-top: 5px;
@@ -91,7 +112,7 @@ body
 	padding: 10px 10px 20px 10px;
 }
 /*******************************************************************/
-/* Common Styles */
+/* Filter Styles */
 /*******************************************************************/
 .filter
 {
@@ -290,6 +311,23 @@ body
 		display: block;
 	}
 }
+/*******************************************************************/
+/* New Event Styles */
+/*******************************************************************/
+.newEventContent
+{
+
+	.event
+	{
+		background: white;
+		margin: 40px 0;
+		padding: 40px;
+		-webkit-box-shadow: 0px 0px 10px rgba(50, 50, 50, 0.2);
+		-moz-box-shadow:    0px 0px 10px rgba(50, 50, 50, 0.2);
+		box-shadow:         0px 0px 10px rgba(50, 50, 50, 0.2);
+	}	
+}
+
 /*******************************************************************/
 /* Event Page Styles */
 /*******************************************************************/
