--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -15,7 +15,7 @@
           mapTypeId: google.maps.MapTypeId.ROADMAP
         };
 
-        map = new google.maps.Map(document.getElementById('map-canvas'),
+        map = new google.maps.Map(document.getElementById('map_canvas'),
             mapOptions);
 
         var contentString = '<div id="content">'+
@@ -70,9 +70,9 @@
         
         <div class="col-md-8 eventPage">
           <% if @event.event_image.blank? %>
-              <%= image_tag restaurant.photo_url(:extra_large_scaled).to_s %>
+              <%= image_tag restaurant.photo_url(:event_page_image).to_s %>
           <% else %>
-              <%= image_tag @event.event_image_url(:extra_large_scaled).to_s %>
+              <%= image_tag @event.event_image_url(:event_page_image).to_s %>
           <% end %>
           
           <div class="eventPageContent">
@@ -175,260 +175,6 @@
 
 
 
-<%# restaurant = Restaurant.find(@event.restaurant_id) %>
-
-<input type="hidden" value=<%= @event.id %> id="event_id" >
-
-<div class="container">
-  <div class="row-fluid">
-    <div class="span6">
-      <div class="eventDetailsImage">
-        <% if @event.event_image.blank? %>
-            <%= image_tag restaurant.photo_url(:extra_large_scaled).to_s %>
-        <% else %>
-            <%= image_tag @event.event_image_url(:extra_large_scaled).to_s %>
-        <% end %>
-        <% if @event.status == 'closed' || @event.status == 'full' %>
-            <div class="closed">
-              <% if @event.status == 'full' %>
-                <h3>Full</h3>
-              <% else %>
-                <h3>Closed</h3>
-              <% end %>
-                
-            </div>    
-        <% end %>
-        
-      </div>
-    </div>
-    <div class="span6">
-      <h1><%= @event.event_name %></h1>   
-      <!--
-      <div class="seats_left_container">
-        <div class="seats_left">
-          <% if @seats_left <= 0 %>
-            Event Full
-          <% else %>
-            <%= @seats_left %>
-            Seats Left
-          <% end %>
-        </div> 
-      </div>
-      -->
-
-      <div class="event_date_time">
-        <i class="icon-time"></i>
-        <%= @event.event_date.strftime("%d %B %Y") %>
-        <%= @event.event_time.strftime("%I:%M%p") %>
-      </div>
-
-      <h3>Price: 
-        <% if restaurant.city == "Hyderabad" || restaurant.city == "Bangalore" || restaurant.city == "Pune" || restaurant.city == "Ahmedabad" %>
-          Rs 
-        <%elsif restaurant.city == "Kuala Lumpur" || restaurant.city == "Selangor" || restaurant.city == "Perak" || restaurant.city == "Penang" %>
-          RM 
-        <% end %>
-        
-        <%= restaurant.price %>
-      </h3>
-      <address>
-        <strong><%= restaurant.name %></strong>
-        <br>
-        <div class="restaurant-address">
-          <i class="icon-map-marker map-icon"></i>
-          <%= restaurant.address %>  
-        </div>
-        
-      </address>
-      
-      <%#  %>
-      <p>
-        <%= simple_format(@event.event_description) %>      
-      </p>
-
-      
-      <% if @already_signed_up == true %>
-        <h4>You have already signed up for this event</h4>          
-        <p>If you want to increase the number of people that will be coming along with you, please drop us an email at hello@gyeser.com and we will get back to you regarding the changes. </p>
-      <% else %>
-        <%# Join form %>
-        <%= form_for @attendee, :url => attendee_path, :html => {:method => :post} do |f|%>
-          <%# f.error_messages %>
-
-          <% if @attendee.errors.any? %>
-            <div id="error_explanation">
-              <h2><%= pluralize(@attendee.errors.count, "error") %> prohibited this event from being saved:</h2>
-
-              <ul>
-              <% @attendee.errors.full_messages.each do |msg| %>
-                <li><%= msg %></li>
-              <% end %>
-              </ul>
-            </div>  
-          <% end %>
-          <div class="field">
-            <%= f.label :seats, "Number of people attending" %>
-            <%= f.number_field :seats, :required => true, :min => 1 %>
-          </div>
-          <div class="field">
-            <%= f.label :phone_number, "Your phone number"%>
-            <%= f.text_field :phone_number, :required => true %>
-          </div>
-          <%= f.hidden_field :event_id, :value => @event.id %>
-
-          <% if @event.seats_left <= 0 %>
-            <%= f.submit "Sign up for waiting list", :class => "large red awesome"  %>
-          <% else %>
-            <%= f.submit "Join this event", :class => "css3-button css3-button_pink joinEvent"  %>
-          <% end %>
-
-        <% end %>  
-      <% end %>
-      
-      
-      
-    </div>
-  </div>
-</div>
-
-<div class="container">
-  <div class="row-fluid">
-    <div class="span12">
-      <h1>Restaurant Location</h1>
-      <div id="map-canvas" style="width: 100%; height: 300px"></div>
-    </div>
-  </div>
-</div>
-
-<div class="container">
-  <div class="row-fluid">
-    <div class="span6">
-      <% total_number_of_courses = 0 %>
-
-      <% @menu_items_categorized.each do |course_name, menu_items| %>
-        
-        <% total_number_of_courses = total_number_of_courses + 1 %>
-      <% end %>      
-
-      <% @menu_items_categorized.each_with_index do |(course_name, menu_items), index| %>        
-        <%# Todo: Clean up this if loop. Right now the if loop is used to correctly put the tags for the span classes %>
-        <% if index%2 == 0 && index != 0 %>
-          </div>
-          <div class="row-fluid group-row">
-            <div class="span6">
-
-              <h3><%= course_name %></h3>
-              <% for menu_item in menu_items%>
-              <div><%= menu_item.name %></div>
-              <% end %>
-
-            </div>
-        <% elsif index == 0 %>
-          <div class="row-fluid group-row">
-            <div class="span6">
-
-              <h3><%= course_name %></h3>
-              <% for menu_item in menu_items%>
-              <div><%= menu_item.name %></div>
-              <% end %>
-
-            </div>
-        <% else %>
-            <div class="span6">
-
-              <h3><%= course_name %></h3>
-              <% for menu_item in menu_items%>
-              <div><%= menu_item.name %></div>
-              <% end %>
-
-            </div>
-        <% end %>
-
-      <% end %>
-      </div>
-    </div>
-    <div class="span6">
-
-      <h3>People Attending</h3>
-
-      <% @event.attendee.each do |personAttending| %>
-        <% user = personAttending.user %>
-        <% if user.image.blank? %>
-            <%= image_tag "/assets/noProfilePic.png", "data-toggle" => "tooltip", :title => user.name, :class => "profilePic" %>    
-        <% else %>
-            <%= image_tag user.image.to_s, "data-toggle" => "tooltip", :title => user.name, :class => "profilePic" %>    
-        <% end %>
-      <% end %>
-    </div>
-  </div>
-</div>
-
-<div class="container">
-  <div class="row-fluid">
-    <div class="span12">
-      <h1>Other events in your city</h1>
-      <p><%= link_to "See all events in your city", events_path%> </p>
-    </div>
-  </div>
-</div>
- 
-<div class="container">
-  <div class="row-fluid">
-    <% @other_events.each do |other_event|%>
-      <div class="span3">
-        <div class="event">
-          
-          <% if other_event.event_image.blank? %>
-              <%= image_tag restaurant.photo_url.to_s %>
-          <% else %>
-              <%= image_tag other_event.event_image_url.to_s %>
-          <% end %>
-
-          <h3><%= link_to other_event.event_name, event_path(other_event) %></h3>
-
-          <div class="seats_left_event_page">
-              <% if @event.attendee.nil?%>
-                  <% seats_left = other_event.max_seats %>    
-              <% else %>
-                  <% seats_left = other_event.max_seats - other_event.attendee.pluck(:seats).sum %>
-              <% end %>
-              <%= seats_left %> Seats left
-          </div>
-          <div class="eventDetails">
-              <div class="detail">
-                  <img src="/assets/locationIcon.png">
-                  <%= restaurant.name %>
-              </div>
-              <div class="detail">
-                  <img src="/assets/timeIcon.png">
-                  <%= other_event.event_date.strftime("%d %B %Y") %>
-                  <%= other_event.event_time.strftime("%I:%M%p") %>
-              </div>
-          </div>
-
-          <p>
-              <%= truncate(other_event.event_description, :length => 100) %> <%= link_to "See event", event_path(other_event) %>
-          </p>
-          <div class="peopleAttending">
-              <% other_event.attendee.first(4).each do |personAttending| %>
-                  <% user =  User.find(personAttending.user_id) %>
-                  <% if user.image.blank? %>
-                      <%= image_tag "/assets/noProfilePic.png", "data-toggle" => "tooltip", :title => user.name, :class => "profilePic" %>    
-                  <% else %>
-                      <%= image_tag user.image.to_s, "data-toggle" => "tooltip", :title => user.name, :class => "profilePic" %>    
-                  <% end %>
-              <% end %>
-              <p>
-                <%= link_to "See All People Attending", event_path(other_event) %>
-              </p>
-          </div>
-
-        </div>
-      </div>
-    <% end %>
-    
-  </div>
-</div>
 
 
 <div id="communication" class="modal hide fade">
