--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -23,41 +23,42 @@
       <p id="private_event_description">A unique URL will be generated for you. You can share this URL with people that will attend. The URL will not be shown anywhere else on the site.</p>
       <p id="public_event_description">Anyone can sign up for this event and will be accessible across the site</p>
       <br/>
-      <div class="field">
+      
+      <div class="form-group">
         <%= f.label :city %>
         <%= select_tag(:city, options_for_select([['Select a city',''],['Hyderabad','Hyderabad'], ['Pune','Pune'], ['Ahmedabad', 'Ahmedabad'], ['Bangalore', 'Bangalore'], ['Kuala Lumpur', 'Kuala Lumpur'], ['Selangor', 'Selangor'], ['Perak', 'Perak'], ['Penang', 'Penang']])) %>
       </div>
-      <div class="field">
+      <div class="form-group">
         <%= f.label :event_name %>
-        <%= f.text_field :event_name %>
+        <%= f.text_field :event_name, :class=>"form-control" %>
       </div>
-      <div class="field">
+      <div class="form-group">
         <%= f.label :event_description %>
-        <%= f.text_area :event_description, :rows => 5 %>
+        <%= f.text_area :event_description, :class=>"form-control",  :rows => 5 %>
       </div>
-      <div class="field">
+      <div class="form-group">
         <%= f.label :max_seats %>
-        <%= f.number_field :max_seats %>
+        <%= f.number_field :max_seats, :class=>"form-control" %>
       </div>
-      <div class="field">
+      <div class="form-group">
         <%= f.label :event_date %>
         <%#f.date_select :event_date %>
         <div class="input-append date" id="dp3" data-date="<%= Time.now.strftime("%d/%m/%Y") %>" data-date-format="dd-mm-yyyy">
-          <%= f.text_field :event_date %>
+          <%= f.text_field :event_date, :class=>"form-control" %>
           <span class="add-on"><i class="icon-calendar"></i></span>
           <!--<input size="16" type="text" value="12-02-2012" readonly>-->
           
         </div>
 
       </div>
-      <div class="field">
+      <div class="form-group">
         <%= f.label :event_time %>
         <div class="input-append bootstrap-timepicker">
           <%= f.text_field :event_time, 'data-minute-step' => "30" %>
           <span class="add-on"><i class="icon-time"></i></span>
         </div>
       </div>
-      <div class="field">
+      <div class="form-group">
         <%= f.label :event_image %>
         <%= f.file_field :event_image %>  
       </div>
@@ -174,14 +175,14 @@
         
       </div>
       <div class="tab-pane" id="tab3">
-      <div class="field">
+      <div class="form-group">
         <%= f.label :invitees %>
         <p>
           Enter the email address for all the people you want to invite. Seperate each email id by a comma. We will send them an invite
         </p>
         <%= f.text_area :invitees, :rows => 5 %>
       </div>
-      <div class="field share_on_facebook">
+      <div class="field share_on_facebook form-group">
         <%= check_box_tag 'facebook_share', :true %>
         Share on Facebook
       </div>
@@ -211,5 +212,3 @@
   });
 </script>
 
-<script>   $(document).ready(function(){     $('#myTab a:last').tab('show');
-}); </script>
