--- a/app/views/layouts/admin/admin.html.erb
+++ b/app/views/layouts/admin/admin.html.erb
@@ -12,7 +12,7 @@
 	<%= yield :stylesheet %>	
 
 	<%= javascript_include_tag "admin/application" %>
-	<%= javascript_include_tag "jquery-1.9.1" %>
+	<%= javascript_include_tag "jquery-1.10.2.min" %>
 	<%= javascript_include_tag "bootstrap" %>
 	<%= javascript_include_tag "admin/highcharts" %>
 	<%= yield :javascript %>	
