Added a textile markup text editor to the event new page for the event description and then rendered the same on the event event page

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -82,7 +82,9 @@
               Saturday, 21 September 2013 4:00PM
             </span>
             <div class="eventDescription">
-              <%= simple_format(@event.event_description) %>      
+              <% event_description_html =  RedCloth.new(@event.event_description).to_html %>      
+              <%# simple_format(@event.event_description) %>      
+              <%= raw event_description_html %>
             </div>
 
             <h3>Menu</h3>
