--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -34,7 +34,7 @@
       </div>
       <div class="form-group">
         <%= f.label :event_description %>
-        <%= f.text_area :event_description, :class=>"form-control",  :rows => 5 %>
+        <%= f.text_area :event_description, :class=>"form-control",  :rows => 10, "data-provide"=> "markdown" %>
       </div>
       <div class="form-group">
         <%= f.label :max_seats %>
