--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,10 +1,15 @@
 <% content_for :javascript do%>
+	<%= stylesheet_link_tag    "bootstrap-markdown.min", :media => "all" %>
 	<%= javascript_include_tag "restaurant_picker" %>
 	<%= javascript_include_tag "bootstrap" %>
 	<%= javascript_include_tag "events" %>
 	<%= javascript_include_tag "jquery.bootstrap.wizard" %>
 	<%= javascript_include_tag "bootstrap-datepicker" %>
 	<%= javascript_include_tag "bootstrap-timepicker" %>
+	<%= javascript_include_tag "markdown" %>
+	<%= javascript_include_tag "to-markdown" %>
+	<%= javascript_include_tag "bootstrap-markdown" %>
+	
 <% end %>
 
 
@@ -29,6 +34,12 @@
         </div>
     </div>
 </div>
+
+<script>
+	$(document).ready(function(){
+		$("#some-textarea").markdown({autofocus:false,savable:false});
+	})
+</script>
 
 <script type="text/javascript">
 	$(document).ready(function() {
