New event page base redesign doen

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -40,15 +40,50 @@
         <%= f.label :max_seats %>
         <%= f.number_field :max_seats, :class=>"form-control" %>
       </div>
+      <!--
       <div class="form-group">
         <%= f.label :event_date %>
         <%#f.date_select :event_date %>
         <div class="input-append date" id="dp3" data-date="<%= Time.now.strftime("%d/%m/%Y") %>" data-date-format="dd-mm-yyyy">
           <%= f.text_field :event_date, :class=>"form-control" %>
           <span class="add-on"><i class="icon-calendar"></i></span>
+          -->
           <!--<input size="16" type="text" value="12-02-2012" readonly>-->
-          
+          <!--
         </div>
+        -->
+
+        <div class="bfh-datepicker">
+  <div class="input-prepend bfh-datepicker-toggle form-group" data-toggle="bfh-datepicker">
+    <span class="add-on"><i class="icon-calendar"></i></span>
+    <input type="text" class="input-medium" readonly>
+  </div>
+  <div class="bfh-datepicker-calendar">
+    <table class="calendar table table-bordered">
+      <thead>
+        <tr class="months-header">
+          <th class="month" colspan="4">
+            <a class="previous" href="#"><i class="icon-chevron-left"></i></a>
+            <span></span>
+            <a class="next" href="#"><i class="icon-chevron-right"></i></a>
+          </th>
+          <th class="year" colspan="3">
+            <a class="previous" href="#"><i class="icon-chevron-left"></i></a>
+            <span></span>
+            <a class="next" href="#"><i class="icon-chevron-right"></i></a>
+          </th>
+        </tr>
+        <tr class="days-header">
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+
+
 
       </div>
       <div class="form-group">
@@ -204,11 +239,3 @@
 
     
 <% end %>  
-
-<script type="text/javascript">
-  $(document).ready(function(){
-    $('#dp3').datepicker();
-    $('#event_event_time').timepicker();
-  });
-</script>
-
