--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,14 +1,17 @@
 <% content_for :javascript do%>
 	<%= stylesheet_link_tag    "bootstrap-markdown.min", :media => "all" %>
+	<%= stylesheet_link_tag    "bootstrap-formhelpers", :media => "all" %>
 	<%= javascript_include_tag "restaurant_picker" %>
 	<%= javascript_include_tag "bootstrap" %>
 	<%= javascript_include_tag "events" %>
 	<%= javascript_include_tag "jquery.bootstrap.wizard" %>
-	<%= javascript_include_tag "bootstrap-datepicker" %>
 	<%= javascript_include_tag "bootstrap-timepicker" %>
 	<%= javascript_include_tag "markdown" %>
 	<%= javascript_include_tag "to-markdown" %>
 	<%= javascript_include_tag "bootstrap-markdown" %>
+	<%= javascript_include_tag "bootstrap-formhelpers-datepicker" %>
+	<%= javascript_include_tag "bootstrap-formhelpers-datepicker.en_US" %>
+	
 	
 <% end %>
 
