Base redesign done. Adding a lat and lon for the restaurant addresses now

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -238,6 +238,9 @@ h4 {
     margin-bottom: 10px;
     display: block; }
 
+.row-bottom-spacing {
+  margin-bottom: 30px; }
+
 /*******************************************************************/
 /* New Event Styles */
 /*******************************************************************/
