--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -311,6 +311,10 @@ h4
 		display: block;
 	}
 }
+.row-bottom-spacing
+{
+	margin-bottom: 30px;
+}
 /*******************************************************************/
 /* New Event Styles */
 /*******************************************************************/
