Fixing the homepage top map so that it shows all the events in a city, as and when the city changes

--- a/app/views/admin/restaurants/_form.html.erb
+++ b/app/views/admin/restaurants/_form.html.erb
@@ -18,6 +18,14 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
+    <%= f.label :latitude%>
+    <%= f.number_field :latitude %>
+  </div>
+  <div class="field">
+    <%= f.label :longitude%>
+    <%= f.number_field :longitude %>
+  </div>
+  <div class="field">
     <p>
       By default any new restaurant created is shown in the event/new page. If you want to hide the restaurant from that list set this field to hidden 
     </p>
