--- a/app/views/admin/restaurant/new.html.erb
+++ b/app/views/admin/restaurant/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="row-fluid">
 		<div class="span12">
-			<h1>New restaurant</h1>
+			<h1>New ddrestaurant</h1>
 
 			<%= render 'form' %>
 
