--- a/app/assets/stylesheets/admin/admin.css.scss
+++ b/app/assets/stylesheets/admin/admin.css.scss
@@ -1,7 +1,8 @@
 /* Variables*/
 $brand_red: #dd4124;
 $brand_red_rgba: rgba(221,65,36,.6);
-$header_background_color: rgba(221,65,36,.5);
+//$header_background_color: rgba(221,65,36,.5);
+$header_background_color: #333;
 $white: #fff;
 $contrast_blue: #1b6e8a;
 $contrast_blue_rgba: rgba(27,110,138,1);
@@ -38,141 +39,7 @@ a:hover
 {
 	background: $grey;
 }
-/******************************************************************************/
-/* Buttons*/
-/******************************************************************************/
-.btn
-{
-  border: none;
-  padding: 0 10px;
-  background: #34495e;
-  color: $white;
-  font-size: 16.5px;
-  text-decoration: none;
-  text-shadow: none;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-  -webkit-transition: 0.25s;
-  -moz-transition: 0.25s;
-  -o-transition: 0.25s;
-  transition: 0.25s;
-  -webkit-backface-visibility: hidden; 
-}
-.btn:hover, .btn:focus 
-{
-  background-color: #4e6d8d;
-  color: white;
-  -webkit-transition: 0.25s;
-  -moz-transition: 0.25s;
-  -o-transition: 0.25s;
-  transition: 0.25s;
-  -webkit-backface-visibility: hidden; 
-}
-.btn:active, .btn.active 
-{
-  background-color: #2c3e50;
-  color: rgba(255, 255, 255, 0.75);
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none; 
-}
-.btn.disabled, .btn[disabled] 
-{
-  background-color: #95a5a6;
-  color: $white; 
-}
-.btn.btn-large 
-{
-  padding-bottom: 12px;
-  padding-top: 13px; 
-}
-.btn.btn-small 
-{
-  padding-bottom: 6px;
-  padding-top: 7px; 
-}
-.btn.btn-primary 
-{
-  background-color: $contrast_green; 
-}
-.btn.btn-primary:hover, .btn.btn-primary:focus 
-{
-  background-color: $contrast_green_rgba; 
-}
-.btn.btn-primary:active, .btn.btn-primary.active 
-{
-  background-color: #16a085; 
-}
-.btn.btn-info 
-{
-  background-color: #3498db; 
-}
-.btn.btn-info:hover, .btn.btn-info:focus 
-{
-  background-color: #5dade2; 
-}
-.btn.btn-info:active, .btn.btn-info.active 
-{
-  background-color: #2383c4; 
-}
-.btn.btn-danger 
-{
-  background-color: #e74c3c; 
-}
-.btn.btn-danger:hover, .btn.btn-danger:focus 
-{
-  background-color: #ec7063; 
-}
-.btn.btn-danger:active, .btn.btn-danger.active 
-{
-  background-color: #dc2d1b; 
-}
-.btn.btn-success 
-{
-  background-color: #2ecc71; 
-}
-.btn.btn-success:hover, .btn.btn-success:focus 
-{
-  background-color: #55d98d; 
-}
-.btn.btn-success:active, .btn.btn-success.active 
-{
-  background-color: #27ad60; 
-}
-.btn.btn-warning 
-{
-  background-color: #f1c40f; 
-}
-.btn.btn-warning:hover, .btn.btn-warning:focus 
-{
-  background-color: #f4d03f; 
-}
-.btn.btn-warning:active, .btn.btn-warning.active 
-{
-  background-color: #cea70c; 
-}
-.btn-toolbar .btn 
-{
-  font-size: 18px;
-  padding: 10px 14px 9px; 
-}
-.btn-toolbar .btn:first-child 
-{
-  -webkit-border-radius: 6px 0 0 6px;
-  -moz-border-radius: 6px 0 0 6px;
-  border-radius: 6px 0 0 6px; 
-}
-.btn-toolbar .btn:last-child 
-{
-  -webkit-border-radius: 0 6px 6px 0;
-  -moz-border-radius: 0 6px 6px 0;
-  border-radius: 0 6px 6px 0; 
-}
-.createEventButton
-{
-	margin-top: 20px;
-}
+
 /******************************************************************************/
 /* General elements */
 /******************************************************************************/
@@ -184,6 +51,37 @@ a:hover
 {
 	float: right;
 }
+body
+{
+	font-family: "nimbus-sans",sans-serif;
+	font-size: 16px;
+	background: #f4f4f4;
+}
+h1
+{
+	font-family: "museo-slab",serif;
+	font-weight: 700;
+	margin-bottom: 20px;
+}
+h2
+{
+	font-family: "museo-slab",serif;
+	font-weight: 700;
+	margin-bottom: 20px;
+}
+h3
+{
+	font-family: "museo-slab",serif;
+	font-weight: 700;
+}
+.contentContainer
+{
+	background: #fff;
+	padding: 40px;
+	-webkit-box-shadow: 1px 0px 10px rgba(50, 50, 50, 0.2);
+		-moz-box-shadow:    1px 0px 10px rgba(50, 50, 50, 0.2);
+		box-shadow:         1px 0px 10px rgba(50, 50, 50, 0.2);
+}
 /******************************************************************************/
 /* Header Styling */
 /******************************************************************************/
@@ -192,8 +90,8 @@ a:hover
 	background: $header_background_color;
 	color: $white;
 	text-transform: uppercase;
-	font-weight: bold;
-	padding-top: 10px;
+	margin-bottom: 20px;
+	padding: 20px 0;
 	a
 	{
 		color: $white;
@@ -207,6 +105,7 @@ a:hover
 	{
 		list-style: none;
 		margin: 0;
+		padding: 0;
 		li
 		{
 			display: inline;
