--- a/app/views/admin/restaurants/new.html.erb
+++ b/app/views/admin/restaurants/new.html.erb
@@ -1,13 +1,19 @@
 <div class="container">
-	<div class="row-fluid">
-		<div class="span12">
+	<div class="row">
+		<div class="col-md-12">
 			<h1>New restaurant</h1>
-
+		</div>
+	</div>
 			<%= render 'form' %>
 
 			<%= link_to 'Back', admin_restaurants_path %>
 			
-		</div>
-	</div>
+		
 </div>
 
+<script>
+$(document).ready(function(){
+	$('select').selectpicker();
+});
+  
+</script>
