--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,71 +3,65 @@
     <%= javascript_include_tag "closed-event-overlay" %>
     <%= javascript_include_tag "jquery.nanoscroller.min" %>
 
-    <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
-    <script>
-      var map;
-      var marker;
-      var myLatlng = new google.maps.LatLng(17.432259,78.407529);
+   <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script type="text/javascript">
+var infowindow = null;
+    $(document).ready(function () { initialize();  });
 
-      function initialize() {
-        var mapOptions = {
-          zoom: 14,
-          center: myLatlng,
-          mapTypeId: google.maps.MapTypeId.ROADMAP,
-          styles: [
-          {
-             featureType: 'all',
-             elementType: 'all',
-             stylers: [
-               { visibility: "on" },
-               // Increase to -100 to remove all color
-               { saturation: -80 }
-            ]
-          }]
-        };
+    function initialize() {
 
-        map = new google.maps.Map(document.getElementById('map_canvas'),
-            mapOptions);
+        var centerMap = new google.maps.LatLng(39.828175, -98.5795);
 
-        var contentString = '<div id="content">'+
-            '<div id="siteNotice">'+
-            '</div>'+
-            '<h2 id="firstHeading" class="firstHeading">Via Milano </h2>'+
-            '<div id="bodyContent">'+
-            '<p><b>Uluru</b>, also referred to as <b>Ayers Rock</b>, is a large ' +
-            'sandstone rock formation in the southern part of the '+
-            'Northern Territory, central Australia. It lies 335 km (208 mi) '+
-            'south west of the nearest large town, Alice Springs; 450 km '+
-            '(280 mi) by road. Kata Tjuta and Uluru are the two major '+
-            'features of the Uluru - Kata Tjuta National Park. Uluru is '+
-            'sacred to the Pitjantjatjara and Yankunytjatjara, the '+
-            'Aboriginal people of the area. It has many springs, waterholes, '+
-            'rock caves and ancient paintings. Uluru is listed as a World '+
-            'Heritage Site.</p>'+
-            '<p>Attribution: Uluru, <a href="http://en.wikipedia.org/w/index.php?title=Uluru&oldid=297882194">'+
-            'http://en.wikipedia.org/w/index.php?title=Uluru</a> (last visited June 22, 2009).</p>'+
-            '</div>'+
-            '</div>';
+        var myOptions = {
+            zoom: 4,
+            center: centerMap,
+            mapTypeId: google.maps.MapTypeId.ROADMAP
+        }
 
-        var infowindow = new google.maps.InfoWindow({
-            content: contentString
-        });
+        var map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
 
-        marker = new google.maps.Marker({
-            position: myLatlng,
-            map: map,
-            title: 'Hello World!'
-        });
+        setMarkers(map, sites);
+      infowindow = new google.maps.InfoWindow({
+                content: "loading..."
+            });
 
-        google.maps.event.addListener(marker, 'click', function() {
-          infowindow.open(map,marker);
-        });
-      }
+        var bikeLayer = new google.maps.BicyclingLayer();
+    bikeLayer.setMap(map);
+    }
 
-      google.maps.event.addDomListener(window, 'load', initialize);
+    var sites = [
+  ['Mount Evans', 39.58108, -105.63535, 4, 'This is Mount Evans.'],
+  ['Irving Homestead', 40.315939, -105.440630, 2, 'This is the Irving Homestead.'],
+  ['Badlands National Park', 43.785890, -101.90175, 1, 'This is Badlands National Park'],
+  ['Flatirons in the Spring', 39.99948, -105.28370, 3, 'These are the Flatirons in the spring.']
+];
 
 
-    </script>
+
+    function setMarkers(map, markers) {
+
+        for (var i = 0; i < markers.length; i++) {
+            var sites = markers[i];
+            var siteLatLng = new google.maps.LatLng(sites[1], sites[2]);
+            var marker = new google.maps.Marker({
+                position: siteLatLng,
+                map: map,
+                title: sites[0],
+                zIndex: sites[3],
+                html: sites[4]
+            });
+
+            var contentString = "Some content";
+
+            google.maps.event.addListener(marker, "click", function () {
+                alert(this.html);
+                infowindow.setContent(this.html);
+                infowindow.open(map, this);
+            });
+        }
+    }
+</script>
+
 
 <% end %>
 
