Added a list to the admin/history page that shows the most popular events from most popular to least popular. This order is sorted by how many people signed up for the event

--- a/app/views/admin/history/index.html.erb
+++ b/app/views/admin/history/index.html.erb
@@ -99,9 +99,10 @@
 					</tr>
 					<% @popular_events.each do |event|%>
 					<tr>
-						<td><%= event.event_name%></td>
-						<td><%= event.total_attendees %></td>
-						<td><%= event.city %></td>
+						<% logger.debug  "The value in the view for the event is: #{event}" %>
+						<td><%= event[:event_name]%></td>
+						<td><%= event[:total_attendees] %></td>
+						<td><%= event[:city] %></td>
 					</tr>
 					<% end %>
 				</table>
