--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,63 +4,55 @@
     <%= javascript_include_tag "jquery.nanoscroller.min" %>
 
    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<script type="text/javascript">
-var infowindow = null;
-    $(document).ready(function () { initialize();  });
-
+   <script>
     function initialize() {
+    var locations = [
+        ['DESCRIPTION', 17.42887,78.412941],
+        ['DESCRIPTION', 17.415092,78.45061],
+        ['DESCRIPTION', 17.43406,78.404927]
+    ];
 
-        var centerMap = new google.maps.LatLng(39.828175, -98.5795);
+    window.map = new google.maps.Map(document.getElementById('map_canvas'), {
+        mapTypeId: google.maps.MapTypeId.ROADMAP
+    });
 
-        var myOptions = {
-            zoom: 4,
-            center: centerMap,
-            mapTypeId: google.maps.MapTypeId.ROADMAP
-        }
+    var infowindow = new google.maps.InfoWindow();
 
-        var map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
+    var bounds = new google.maps.LatLngBounds();
 
-        setMarkers(map, sites);
-      infowindow = new google.maps.InfoWindow({
-                content: "loading..."
-            });
+    for (i = 0; i < locations.length; i++) {
+        marker = new google.maps.Marker({
+            position: new google.maps.LatLng(locations[i][1], locations[i][2]),
+            map: map
+        });
 
-        var bikeLayer = new google.maps.BicyclingLayer();
-    bikeLayer.setMap(map);
+        bounds.extend(marker.position);
+
+        google.maps.event.addListener(marker, 'click', (function (marker, i) {
+            return function () {
+                infowindow.setContent(locations[i][0]);
+                infowindow.open(map, marker);
+            }
+        })(marker, i));
     }
 
-    var sites = [
-  ['Mount Evans', 39.58108, -105.63535, 4, 'This is Mount Evans.'],
-  ['Irving Homestead', 40.315939, -105.440630, 2, 'This is the Irving Homestead.'],
-  ['Badlands National Park', 43.785890, -101.90175, 1, 'This is Badlands National Park'],
-  ['Flatirons in the Spring', 39.99948, -105.28370, 3, 'These are the Flatirons in the spring.']
-];
+    map.fitBounds(bounds);
 
+    var listener = google.maps.event.addListener(map, "idle", function () {
+        map.setZoom(11);
+        google.maps.event.removeListener(listener);
+    });
+}
 
+function loadScript() {
+    var script = document.createElement('script');
+    script.type = 'text/javascript';
+    script.src = 'https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&' + 'callback=initialize';
+    document.body.appendChild(script);
+}
 
-    function setMarkers(map, markers) {
-
-        for (var i = 0; i < markers.length; i++) {
-            var sites = markers[i];
-            var siteLatLng = new google.maps.LatLng(sites[1], sites[2]);
-            var marker = new google.maps.Marker({
-                position: siteLatLng,
-                map: map,
-                title: sites[0],
-                zIndex: sites[3],
-                html: sites[4]
-            });
-
-            var contentString = "Some content";
-
-            google.maps.event.addListener(marker, "click", function () {
-                alert(this.html);
-                infowindow.setContent(this.html);
-                infowindow.open(map, this);
-            });
-        }
-    }
-</script>
+window.onload = loadScript;
+   </script>
 
 <% end %>
 
