--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,7 +28,17 @@
     ];
 
     window.map = new google.maps.Map(document.getElementById('map_canvas'), {
-        mapTypeId: google.maps.MapTypeId.ROADMAP
+        mapTypeId: google.maps.MapTypeId.ROADMAP,
+        styles: [
+          {
+             featureType: 'all',
+             elementType: 'all',
+             stylers: [
+               { visibility: "on" },
+               // Increase to -100 to remove all color
+               { saturation: -80 }
+            ]
+          }]
     });
 
     var infowindow = new google.maps.InfoWindow();
