--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -251,6 +251,19 @@ h4 {
   -webkit-box-shadow: 0px 0px 10px rgba(50, 50, 50, 0.2);
   -moz-box-shadow: 0px 0px 10px rgba(50, 50, 50, 0.2);
   box-shadow: 0px 0px 10px rgba(50, 50, 50, 0.2); }
+.newEventContent .newEventCitySelect select {
+  background: #737373;
+  color: white;
+  padding: 10px;
+  width: 200px;
+  -moz-border-radius: 0px;
+  -webkit-border-radius: 3px 3px 3px 3px;
+  border-radius: 3px 3px 3px 3px; }
+  .newEventContent .newEventCitySelect select:hover {
+    background: #8a8a8a;
+    cursor: pointer; }
+.newEventContent .restaurant_hidden {
+  display: none; }
 
 /*******************************************************************/
 /* Event Page Styles */
