--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -123,10 +123,10 @@ h4
 	#citySelect
 	{
 		&:hover
-	{
-		background: #8a8a8a;
-		cursor: pointer;
-	}
+		{
+			background: #8a8a8a;
+			cursor: pointer;
+		}
 		background: #737373;
 		color: white;
 		//display: inline;
@@ -330,6 +330,31 @@ h4
 		-moz-box-shadow:    0px 0px 10px rgba(50, 50, 50, 0.2);
 		box-shadow:         0px 0px 10px rgba(50, 50, 50, 0.2);
 	}	
+
+	.newEventCitySelect
+	{
+		select
+		{
+			&:hover
+			{
+				background: #8a8a8a;
+				cursor: pointer;
+			}
+			background: #737373;
+			color: white;
+			//display: inline;
+			padding: 10px;
+			width: 200px;
+			-moz-border-radius: 0px;
+			-webkit-border-radius: 3px 3px 3px 3px;
+			border-radius: 3px 3px 3px 3px; 
+		}
+		
+	}
+	.restaurant_hidden
+	{
+		display: none;
+	}
 }
 
 /*******************************************************************/
