--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -25,8 +25,10 @@
       <br/>
       
       <div class="form-group">
-        <%= f.label :city %>
-        <%= select_tag(:city, options_for_select([['Select a city',''],['Hyderabad','Hyderabad'], ['Pune','Pune'], ['Ahmedabad', 'Ahmedabad'], ['Bangalore', 'Bangalore'], ['Kuala Lumpur', 'Kuala Lumpur'], ['Selangor', 'Selangor'], ['Perak', 'Perak'], ['Penang', 'Penang']])) %>
+        <div class="newEventCitySelect">
+          <%= f.label :city %>
+          <%= select_tag(:city, options_for_select([['Select a city',''],['Hyderabad','Hyderabad'], ['Pune','Pune'], ['Ahmedabad', 'Ahmedabad'], ['Bangalore', 'Bangalore'], ['Kuala Lumpur', 'Kuala Lumpur'], ['Selangor', 'Selangor'], ['Perak', 'Perak'], ['Penang', 'Penang']])) %>
+        </div>
       </div>
       <div class="form-group">
         <%= f.label :event_name %>
@@ -52,47 +54,63 @@
           <!--
         </div>
         -->
+        <div class="row">
+          <div class="col-lg-6">
 
-        <div class="bfh-datepicker">
-  <div class="input-prepend bfh-datepicker-toggle form-group" data-toggle="bfh-datepicker">
-    <span class="add-on"><i class="icon-calendar"></i></span>
-    <input type="text" class="input-medium" readonly>
-  </div>
-  <div class="bfh-datepicker-calendar">
-    <table class="calendar table table-bordered">
-      <thead>
-        <tr class="months-header">
-          <th class="month" colspan="4">
-            <a class="previous" href="#"><i class="icon-chevron-left"></i></a>
-            <span></span>
-            <a class="next" href="#"><i class="icon-chevron-right"></i></a>
-          </th>
-          <th class="year" colspan="3">
-            <a class="previous" href="#"><i class="icon-chevron-left"></i></a>
-            <span></span>
-            <a class="next" href="#"><i class="icon-chevron-right"></i></a>
-          </th>
-        </tr>
-        <tr class="days-header">
-        </tr>
-      </thead>
-      <tbody>
-      </tbody>
-    </table>
-  </div>
-</div>
+              <%= f.label :event_date %>
+              <div class="bfh-datepicker">
+                <div class="input-prepend bfh-datepicker-toggle form-group" data-toggle="bfh-datepicker">
+                  <div class="input-group">
+                    <span class="input-group-addon add-on"><i class="icon-calendar"></i></span>
+                    <%= f.text_field :event_date, :class=>"form-control" %>
+                  </div>
+                </div>
+                <div class="bfh-datepicker-calendar">
+                  <table class="calendar table table-bordered">
+                    <thead>
+                      <tr class="months-header">
+                        <th class="month" colspan="4">
+                          <a class="previous" href="#"><i class="icon-chevron-left"></i></a>
+                          <span></span>
+                          <a class="next" href="#"><i class="icon-chevron-right"></i></a>
+                        </th>
+                        <th class="year" colspan="3">
+                          <a class="previous" href="#"><i class="icon-chevron-left"></i></a>
+                          <span></span>
+                          <a class="next" href="#"><i class="icon-chevron-right"></i></a>
+                        </th>
+                      </tr>
+                      <tr class="days-header">
+                      </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+              </div>
+          </div>
+            
+          </div>
 
 
+          <div class="col-lg-6">
+            <div class="form-group">
+              <%= f.label :event_time %>
+              <div class="input-group">
+                <span class="input-group-addon add-on"><i class="icon-time"></i></span>
+                
+                <%= f.text_field :event_time, :class=>"form-control", 'data-minute-step' => "30" %>
+              </div>
+              <div class="input-append bootstrap-timepicker">
+              
+              </div>
+            </div>
+          </div>
 
-
-      </div>
-      <div class="form-group">
-        <%= f.label :event_time %>
-        <div class="input-append bootstrap-timepicker">
-          <%= f.text_field :event_time, 'data-minute-step' => "30" %>
-          <span class="add-on"><i class="icon-time"></i></span>
         </div>
-      </div>
+        
+
+      
+      
       <div class="form-group">
         <%= f.label :event_image %>
         <%= f.file_field :event_image %>  
@@ -101,13 +119,8 @@
     
     <div class="tab-pane" id="tab2">
 
-      <ul class="nav nav-tabs">
-        <li class="active"><a href="#restaurants" data-toggle="tab">Restaurants</a></li>
-        <!--<li><a href="#experiences" data-toggle="tab">Dining Experiences</a></li>-->
-      </ul>
 
       <div class="tab-content">
-        <div class="tab-pane active" id="restaurants">
           <div class="field">
             <%# f.select :restaurant_id, Restaurant.all.collect {|x| [x.name, x.id]}, {}%>        
             <%= f.hidden_field :restaurant_id %>
@@ -151,59 +164,9 @@
               </div>
 
             </div>    
-        </div>
+        
 
-        <!--
-        Dining experiences. 
-        <div class="tab-pane" id="experiences">
-          <div class="field">
-            <%# f.select :restaurant_id, Restaurant.all.collect {|x| [x.name, x.id]}, {}%>        
-            <%# f.hidden_field :experience_id %>
-
-            <div class="row-fluid">
-              <div class="span6">
-                <% @experiences.each do |experience| %>
-                  <div class="restaurantDetailsCotaniner restaurant_hidden <%= experience.city %>" id="<%= experience.id %>"> 
-                    <%= image_tag experience.experience_picture_url(:thumb).to_s %>
-                    <div class="restaurantDetails">
-                      <h4><%= experience.name %></h4>
-                      <p>
-                        <%= experience.about %>
-                      </p>
-                      <h4>Price: <%= experience.cost %> </h4>
-                      <a class="medium awesome blue">View menu</a>
-                    </div>
-                  </div>
-                <% end %>  
-                
-                
-              </div>
-
-              <div class="span6">
-                <div class="restaurantMenu">
-                    <% @experiences.each do |experience| %>
-                      <div class="menuItems" id="restaurant<%= experience.id %>menu">
-                        <% menu_items_categorized = experience.menu_items.group_by { |menu_item| menu_item.course_name} %>
-                        <% menu_items_categorized.each do |course_name, menu_items| %>
-                          <h4><%= course_name %></h4>
-                          <ul>
-                            <% menu_items.each do |menu_item| %>
-                              <li><%= menu_item.name %></li>
-                            <% end %>
-                          </ul>
-                        <% end %>
-                      </div>
-                  <% end %>                
-                  
-
-                  </div> 
-                </div>
-                
-              </div>
-
-            </div>  
-        </div>
-        -->
+        
       </div>
 
       
